cabal-version:      2.4
name:               mazegen
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            WTFPL
license-file:       LICENSE
author:             Glasses-Neo
maintainer:         meganeo.programmer@gmail.com

-- A copyright notice.
-- copyright:
category:           CLI
extra-source-files: CHANGELOG.md

executable mazegen
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
